# FreeTACACS

./: .gitignore  AUTHORS.md  Makefile  README.md  example-authorisations.json  example-config.yaml  example-config.yml  example-shared-secrets.json  example-users.json  freetacacs_plugin.py  requirements.txt  setup.cfg
.github/workflows/: pylint.yml
deploy/: README.md
deploy/docker/: Dockerfile.Freetacacs  Dockerfile.client  example-composer.yml
freetacacs/: accounting.py  authentication.py  authorisation.py  commandline.py  configuration.py  exceptions.py  factory.py  flags.py  header.py  misc.py  packet.py  protocol.py  service.py
freetacacs/tests/: conftest.py  test_account_reply.py  test_account_request.py  test_authen_continue.py  test_authen_reply.py  test_authen_start.py  test_author_reply.py  test_author_request.py  test_commandline.py  test_configuration.py  test_header.py  test_misc.py  test_packet.py  test_protocol.py
freetacacs/tests/data/configuration/: config.json  config.yaml
freetacacs/tests/data/configuration/etc/: config.json  config.yaml
tests/: test_authen_reply.py  test_authen_start.py  test_header.py  test_packet.py
twisted/plugins/: freetacacs_plugins.py
