[metadata]
name = FreeTACACS
description = A TACACS+ server
license_file = LICENSE
readme = README.md
url = https://github.com/Martinpi721/FreeTACACS
classifiers =
        Development Status :: 2 - Pre-Alpha
        Framework :: Twisted
        Intended Audience :: System Administrators
        License :: OSI Approved :: GNU General Public License v2 (GPLv2)
        Programming Language :: Python :: 3
        Topic :: Security
        Topic :: System :: Logging
        Topic :: System :: Networking
        Topic :: System :: Networking :: Monitoring

[options]
packages =
        freetacacs
        twisted.plugins
python_requires = >= 3, < 4
setup_requires = setuptools_scm >= 3.4
install_requires = twisted[tls] >= 23.10.0
include_package_data = True

